Bug 1864815 - Fix up cssRules when calling replace() repeatedly. r=nordzilla

Differential Revision: https://phabricator.services.mozilla.com/D195234