layout/style/StyleSheet.cpp
@@ -1218,6 +1218,7 @@ void StyleSheet::FinishAsyncParse(
   MOZ_ASSERT(!mParsePromise.IsEmpty());
   Inner().mContents = aSheetContents;
   Inner().mUseCounters = std::move(aUseCounters);
+  FixUpRuleListAfterContentsChangeIfNeeded();
   mParsePromise.Resolve(true, __func__);
 }
 
